# clublog-ha-bridge

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  clublog-ha-bridge.py  config.py  docker-compose.yaml  hacs.json  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ruff.yml
custom_components/clublog/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/clublog/translations/: en.json
docs/: ROADMAP.md
docs/wiki/: ClubLog-Data.md  Dashboard-Examples.md  Home.md  Troubleshooting.md
tests/: __init__.py  conftest.py  test_config.py  test_config_flow.py  test_coordinator.py  test_sensors.py
