[project]
name = "clublog-ha-bridge"
version = "0.1.0"
description = "Home Assistant integration for ClubLog, the amateur radio community's premier DX logging and analysis platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pentafive"}
]
requires-python = ">=3.9"
keywords = ["home-assistant", "mqtt", "amateur-radio", "clublog", "hacs", "dxcc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "F841", "F401", "UP009", "I001"]
"clublog-ha-bridge.py" = ["ARG001", "UP009"]
"config.py" = ["UP009"]

[tool.ruff.lint.isort]
known-first-party = ["config", "custom_components.clublog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
